Refactor Event model
Move away from 1-1 json-to-model representation,