@@ -1,60 +1,55 @@
 package chariot.model;
 
-import java.util.Optional;
-
-import chariot.model.Enums.*;
+import chariot.model.Enums.Outcome;
 
 public sealed interface Event {
 
-    enum Type { gameStart, gameFinish, challenge, challengeCanceled, challengeDeclined }
+    record GameStartEvent(GameInfo game, Compat compat)                                     implements GameEvent {}
+    record GameStopEvent(GameInfo game, String lastMove, Result result, Compat compat)      implements GameEvent {}
 
-    Type type();
-    default String id() {
+    record ChallengeCreatedEvent(ChallengeInfo challenge, Compat compat)                    implements ChallengeEvent {}
+    record ChallengeRematchEvent(ChallengeInfo challenge, String rematchOf, Compat compat)  implements ChallengeEvent {}
+    record ChallengeCanceledEvent(ChallengeInfo challenge)                                  implements ChallengeEvent {}
+    record ChallengeDeclinedEvent(ChallengeInfo challenge, DeclineReason reason)            implements ChallengeEvent {}
 
-        // --enable-preview
-        // return switch(this) {
-        //     case GameEvent ge -> ge.game().gameId();
-        //     case ChallengeEvent ce -> ce.challenge().id();
-        // };
-
-        if (this instanceof GameEvent ge) {
-            return ge.game().gameId();
-        } else if (this instanceof ChallengeEvent ce) {
-            return ce.challenge().id();
-        } else {
-            throw new RuntimeException("Unknown event: " + this);
-        }
+    enum Type {
+        gameStart,
+        gameFinish,
+        challenge,
+        challengeCanceled,
+        challengeDeclined
     }
 
-    record GameEvent(Type type, GameInfo game) implements Event {
-        public record GameInfo(
-                String fullId,
-                String gameId,
-                String fen,
-                Color color,
-                String lastMove,
-                Variant variant,
-                Speed speed,
-                PerfTypeWithFromPos perf,
-                boolean rated,
-                boolean hasMoved,
-                Opponent opponent,
-                boolean isMyTurn,
-                int secondsLeft,
-                Optional<String> tournamentId,
-                Optional<String> swissId,
-                String source,
-                Compat compat
-                ) {}
-        public record Variant (GameVariant key, String name) {}
-        public sealed interface Opponent permits Opponent.User, Opponent.AI {
-            public record User (String id, String username, Integer rating) implements Opponent {}
-            public record AI(String id, String username, Integer ai) implements Opponent {}
-        }
-    }
+    sealed interface Result {}
+    record Casual(Outcome outcome) implements Result {}
+    record Rated(Outcome outcome, int ratingDiff) implements Result {}
 
-    // Todo, check what challenge structure is used in this StreamEvent - maybe something similar generic (as opposed to identical separate structurs)
-    record ChallengeEvent(Type type, Challenge challenge, Compat compat) implements Event {}
-
+    record DeclineReason(String key, String text) {}
     record Compat(boolean bot, boolean board) {}
+
+    default Type type() {
+        if (this instanceof GameStartEvent) return Type.gameStart;
+        if (this instanceof GameStopEvent) return Type.gameFinish;
+        if (this instanceof ChallengeCreatedEvent) return Type.challenge;
+        if (this instanceof ChallengeRematchEvent) return Type.challenge;
+        if (this instanceof ChallengeCanceledEvent) return Type.challengeCanceled;
+        if (this instanceof ChallengeDeclinedEvent) return Type.challengeDeclined;
+        throw new RuntimeException("Unknown event: " + this);
+    }
+
+    default String id() {
+        if (this instanceof GameEvent ge) return ge.gameId();
+        if (this instanceof ChallengeEvent ce) return ce.id();
+        throw new RuntimeException("Unknown event: " + this);
+    }
+
+    sealed interface GameEvent      extends Event {
+        GameInfo game();
+        default String gameId() { return game().gameId(); }
+    }
+
+    sealed interface ChallengeEvent extends Event {
+        ChallengeInfo challenge();
+        default String id() { return challenge().id(); }
+    }
 }
